# diffusion_tools

./: .gitignore  404.html  Pipfile  README.md  build.py  index.html  mkdocs.yml  mypy.ini  pyproject.toml  setup.cfg  setup.py  sitemap.xml  test.py  test_build.py
SUMMARY/: index.html
algebra/: index.html
difftools/: __init__.py  algebra.py  combination.py  diffusion.py  graph.py  maximization.py  simulation.py  trial.py  util.py
difftools/diffusion/: ic.py  information_engine.py
difftools/diffusion/multi/: __init__.py  _jit.py  _runtime.py  _types.py
diffusion/: index.html
diffusion_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: SUMMARY.md  algebra.md  diffusion.md  maximization.md  trial.md
maximization/: index.html
search/: search_index.json
test/: graph.txt
tests/: test_graph.py
tests/diffusion/: test_multi.py
trial/: index.html
